--- a/templates/service.mustache
+++ b/templates/service.mustache
@@ -14,6 +14,9 @@ Group={{username}}
 {{#environment}}
 Environment={{key}}={{value}}
 {{/environment}}
+{{#serviceOptions}}
+{{key}}={{value}}
+{{/serviceOptions}}
 
 [Install]
 WantedBy=multi-user.target
