Added '%config' feature on spec file generation

--- a/templates/spec.mustache
+++ b/templates/spec.mustache
@@ -62,3 +62,6 @@ rm -rf %{buildroot}
 {{.}}
 {{/executableFiles}}
 {{/hasExecutableFiles}}
+{{#configFiles}}
+%config{{#noreplace}}(noreplace){{/noreplace}} {{file}}
+{{/configFiles}}
