updated templates with new ExecStart & licence (not clear why this is not being pulled from the spac.json)

--- a/templates/service.mustache
+++ b/templates/service.mustache
@@ -12,7 +12,7 @@ Type=simple
 Restart=always
 RestartSec=10
 WorkingDirectory=/usr/lib/genesis-skeleton
-ExecStart=/usr/lib/genesis-skeleton/genesis-skeleton.jar
+ExecStart=/bin/bash -c "java -jar /usr/lib/genesis-skeleton/target/scala-2.11/genesis-skeleton.jar"
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier={{name}}
