Add simple build and service overrides
This commit adds the ability to override some of the service config,
while maintaining our sane defaults. It also allows you to change
the build steps around to anything. This support is needed for us
to be able to install a pakcage not using npm.

--- a/templates/spec.hbs
+++ b/templates/spec.hbs
@@ -35,6 +35,9 @@ npm prune --production
 {{#rebuild}}
 npm rebuild
 {{/rebuild}}
+{{#buildSteps}}
+{{{.}}}
+{{/buildSteps}}
 
 %pre
 getent group {{username}} >/dev/null || groupadd -r {{username}}
