FIX: fix for mangling shebang
without this line, centos8 ARM fails builds with

`*** WARNING {some dependency or file here, such as a readme} is executable but has no shebang, removing executable bit`

This one liner fixes it

--- a/templates/spec.hbs
+++ b/templates/spec.hbs
@@ -3,6 +3,7 @@
 %define version {{version}}
 %define release {{release}}
 %define buildroot %(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
+%undefine __brp_mangle_shebangs
 
 Name: %{name}
 Version: %{version}
