feat(service): enable node --run command for v22+

--- a/templates/service.hbs
+++ b/templates/service.hbs
@@ -8,7 +8,7 @@ After=network.target nss-lookup.target
 {{/unitOptions}}
 
 [Service]
-ExecStart=/usr/bin/npm start
+ExecStart={{execCommand}} start
 WorkingDirectory=/usr/lib/{{name}}
 Restart=always
 StandardOutput=syslog
