--- a/templates/spec.hbs
+++ b/templates/spec.hbs
@@ -31,10 +31,10 @@ AutoReqProv: no
 
 %build
 {{#prune}}
-NODE_ENV=production npm prune
+NODE_ENV=production pnpm prune
 {{/prune}}
 {{#rebuild}}
-npm rebuild
+pnpm rebuild
 {{/rebuild}}
 
 %pre
